--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title> Club Weltmeisterschaft</title>
     <link rel="icon" type="x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -73,8 +74,17 @@
 
 <p>Bock auf ein Fußballspiel?</p>
 <p><b><a href="https://doodles.google/doodle/soccer-2012/"target="_blank">Press it to play a game</a></b></p>
+<!-- ...existing code... -->
 
- <p><b><a href="website2.html">Ergebnisse 1. Spieltag</a></b>              <b><a href="website3.html">Ergebnisse 2. Spieltag</a></b></p>
+<p id="demo">Zähle mit: 0</p>
+<button type="button" onclick="zaehler()">Click me</button>
+
+<script src="myScript.js"></script>
+
+<!-- ...existing code... -->
+
+<p>Hier sind die Ergebnisse der bisherigen Spieltagen:</p>
+<p><a href="website2.html">Ergebnisse 1. Spieltag</a><a href="website3.html">Ergebnisse 2. Spieltag</a></p>
 
 </body>
 </html>
